# capy

./: .gitignore  AGENTS.md  Capy_Changes.ipynb  Chicago File Make.ipynb  Chicago Reproduction.ipynb  Chicago_Reproduce.sh  Grid Figs.ipynb  Grid_reproduction.ipynb  Iowa.ipynb  Makefile  Metro_Rankings.ipynb  README.md  calculate_metrics.py  chicago.sh  filter_cbsas.py  gen-duals.py  intersection.py  parse_output.py  pyproject.toml  reproduce.sh  setup.sh
Logbook and photos/: Logbook.ipynb
Metro Area Network Statistics/: cbsa_city_profiles.ipynb
configs/: list1_april_2018.xls
experiments/: README.md  defaults.json  experiment_orchestration.py
pipeline/: build_census_geographies.py  build_study_areas.py  calculate_metrics.py  config.yaml  definitions.py  download_geographies.py  download_population_tables.py  experiment_orchestration.py  filter_cbsas.py  gen-duals.py  gen_duals.py  generate_figures.py  graphs.py  metrics.py  orchestration.py  overlaps.py  process_results.py  random_swaps.py
scripts/: build_study_areas.sh  definitions.py  filter.sh  filter_cbsas.py  generate_figures.py  overlaps.sh  parse_output.py  pipeline_config.sh  preprocess.py  reproduce.sh  resolve_config.py  run_experiment.sh  run_overlap.sh  setup.sh
stats/: cbsa-name dictionary.csv
study_area_sources/: README.md
tests/: 804123_21340_february_2013_cbsa_tracts.dbf  804123_21340_february_2013_cbsa_tracts.shp  804123_21340_february_2013_cbsa_tracts.shx  test_build_census_geographies.py  test_build_study_areas.py  test_download_geographies.py  test_metrics.py  test_parse_output.py
(+73 files in other folders)
