[tool.poetry]
name = "capy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
geopandas = "^0.11.0"
us = "^2.0.2"
pydantic = "^1.9.1"
xlrd = "^2.0.1"
typer-cli = "^0.0.12"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
